<resources>
    <string name="app_name">RideCellAndroidProject</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm-Password</string>
    <string name="login_text">Login</string>
    <string name="sign_up_instead_text">Sign Up\nInstead</string>
    <string name="full_name_text">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="map_text">Map</string>
    <string name="profile_text">Profile</string>
    <string name="logout_text">Logout</string>
</resources>