<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_image"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:orientation="horizontal"
        android:weightSum="25"
        android:layout_marginTop="@dimen/margin_10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_image"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_text"
                android:textSize="@dimen/text_12sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textSize="@dimen/text_12sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/days_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22 days"
                android:textSize="@dimen/text_12sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_80dp"
        android:background="@drawable/rectangle_image"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_10dp"
        android:text="@string/logout_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp" />

</RelativeLayout>